# envelop

./: .gitignore  .goreleaser.yaml  LICENCE.txt  LICENSE.txt  Makefile  README.md  buf.gen.yaml  buf.yaml  devbox.json  go.mod  go.sum  justfile  pyproject.toml
.github/workflows/: build-release.yaml
cmd/envelop/: envelop.go
docker/: Dockerfile  compose.yml
internal/: producer.go  wrapper.go
internal/cli/: cli.go  install.go  run.go  update.go  wrapper.go
internal/config/: config.go  envelop-spec.json  schema.go
internal/install/: decode.go  decompress_tar.go  decompress_targz.go  decompress_zip.go  depot_files.go  depot_steam.go  download.go  get_content.go  get_data.go  get_http.go  install-manifest.json  install.go  installer.go  manifest-spec.json  manifest.go  process_archive.go  process_content.go  process_data.go  process_files.go  process_http.go  schema.go  source.go  source_base64.go  source_http.go  source_steam.go  source_url.go  types.go  utils.go
internal/install/data/: manifest-spec.json  manifest.json
internal/modules/: modules.go
internal/modules/configs/: module.go  properties.go
internal/modules/core/: hook_http.go  log.go  log_default.go  log_http.go  module.go  players.go  process.go  service_players.go  service_process.go  service_system.go  system.go
internal/modules/minecraft/: consts.go  module.go  query.go  rcon.go  service_rcon.go  slp.go  task_players.go  task_status.go  tasks.go
internal/modules/rcon/: lib.go  module.go  service_rcon.go
internal/protocols/: rcon.go
internal/protocols/query/: minecraft_ut3.go  utils_ut3.go
internal/protocols/ut3/: minecraft.go  utils.go
internal/utils/: buffer.go  io.go  nanoid.go  producer.go
internal/utils/logutils/: multi.go
internal/wrapper/: cmd_linux.go  cmd_windows.go  config.go  context.go  events.go  graceful.go  grpc.go  hook.go  hook_http.go  hooks.go  keyvalue.go  log.go  log_default.go  log_events.go  log_http.go  logging.go  manager.go  mapconv.go  options.go  pool.go  process.go  publisher.go  registry.go  states.go  task.go  types.go  wrapper.go
internal/wrapper/conf/: config.go  envelop-spec.json
internal/wrapper/log/: handlers.go  levels.go
pkg/download/: checksum.go  decompress.go  decompress_tar.go  decompress_targz.go  decompress_zip.go  download.go  get.go  get_data.go  get_http.go
pkg/minecraft/query/: query.go
pkg/protobufs/: events.pb.go  players.pb.go  players_grpc.pb.go  process.pb.go  process_grpc.pb.go  rcon.pb.go  rcon_grpc.pb.go  system.pb.go  system_grpc.pb.go
pkg/pubsub/: interfaces.go  producer.go  pubsub.go  subscriber.go
pkg/rcon/: rcon.go
pkg/steam/: crypto.go  gameid.go  globalid.go  pubkeys.go  steamid.go  utils.go
pkg/steam/steamapi/: client.go
pkg/steam/steamcdn/: client.go  manifest.go
pkg/steam/steamcm/: buffer.go  cdn.go  client.go  conn.go  conn_cm.go  conn_encrypted.go  crypto.go  future.go  handle_unified_messages.go  handler.go  handler_apps.go  handler_base.go  handler_content.go  handler_user.go  headers.go  layer.go  layer_dispatch.go  layer_encrypted.go  layer_packet.go  layer_session.go  layer_stack.go  layer_tcp.go  manifest.go  msg.go  msg_base.go  msg_channelencrypt.go  msg_user.go  packet.go  packet_in.go  packet_out.go  protocol.go  protocol_encrypted.go  protocol_multi.go  protocol_tcp.go  servers.go
pkg/steam/steamdl/: download.go
protobufs/: events.proto  players.proto  process.proto  system.proto
protos/: players.proto  process.proto  rcon.proto  system.proto
resources/install/: manifests.json
resources/protobufs/: players.proto  process.proto  rcon.proto  system.proto
scripts/: pyapp_hook.py
src/envelop/: __main__.py  app.py  cli.py  config.py  consumer.py  emitter.py  events.py  process.py  queue.py  signals.py  states.py  store.py  types.py
(+207 files in other folders)
